Feat: 리다이렉트 수정

--- a/template/main.html
+++ b/template/main.html
@@ -75,34 +75,48 @@
                 <h1>사용방법</h1>
                 <span class="close" id="closeModalButton">&times;</span>
             </div>
-            <ul><h3>우측 상단의 필터를 사용하시면 원하는 코스를 쉽게 걸러 보실 수 있습니다.</h3>
-                <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>거리순</strong>: 자전거 코스의 길이에 따른 필터를 제공합니다.</li> 
-                <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>위치</strong>: 자전거 코스가 속한 위치(구/군 기준)에 따른 필터를 제공합니다.</li> 
-                <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>풍경</strong>: 주변 풍경(공원,강변, 바다, 도시)에 따른 필터를 제공합니다.</li></p>
+            <ul>
+                <h3>우측 상단의 필터를 사용하시면 원하는 코스를 쉽게 걸러 보실 수 있습니다.</h3>
+                <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>거리순</strong>: 자전거 코스의 길이에 따른 필터를 제공합니다.</li>
+                <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>위치</strong>: 자전거 코스가 속한 위치(구/군 기준)에 따른 필터를 제공합니다.</li>
+                <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>풍경</strong>: 주변 풍경(공원,강변, 바다, 도시)에 따른 필터를 제공합니다.</li>
+                </p>
             </ul>
-            <ul><p><h3>지도에 표시되는 마커나 선을 클릭 시 좌측 요약창에 정보가 표시됩니다.</h3>
+            <ul>
+                <p>
+                <h3>지도에 표시되는 마커나 선을 클릭 시 좌측 요약창에 정보가 표시됩니다.</h3>
                 <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>관광지명</strong>: 클릭 시 관련 정보 사이트로 연결됩니다.</li>
                 <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>거리</strong>: 코스의 총 거리를 나타냅니다.</li>
                 <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>시작/도착 위치</strong>: 시작/도착 위치의 주소를 나타냅니다.</li>
                 </p>
             </ul>
-            <p><h3>추천 코스는 테마에 따라 4가지 색으로 표현됩니다.</h3>
-                <span class="manual_thema">&nbsp;&nbsp;
-                    <span class="manual_thema_logo" ><img src="../images/park_marker.png"><span id="forestgreen">공원</span></span>
-                    <span class="manual_thema_logo" ><img src="../images/river_marker.png"><span id="turquoise">강변</span></span>
-                    <span class="manual_thema_logo" ><img src="../images/beach_marker.png"><span id="cobalt_blue">바다</span></span>
-                    <span class="manual_thema_logo" ><img src="../images/city_marker.png"><span id="cadetblue">도시</span></span>
-                </span><br>
+            <p>
+            <h3>추천 코스는 테마에 따라 4가지 색으로 표현됩니다.</h3>
+            <span class="manual_thema">&nbsp;&nbsp;
+                <span class="manual_thema_logo"><img src="../images/park_marker.png"><span
+                        id="forestgreen">공원</span></span>
+                <span class="manual_thema_logo"><img src="../images/river_marker.png"><span
+                        id="turquoise">강변</span></span>
+                <span class="manual_thema_logo"><img src="../images/beach_marker.png"><span
+                        id="cobalt_blue">바다</span></span>
+                <span class="manual_thema_logo"><img src="../images/city_marker.png"><span
+                        id="cadetblue">도시</span></span>
+            </span><br>
             </p>
-            <ul><h3>좌측 요약창의 화살표를 클릭 시 정보 요약 창을 축소시킬 수 있습니다.</h3>
+            <ul>
+                <h3>좌측 요약창의 화살표를 클릭 시 정보 요약 창을 축소시킬 수 있습니다.</h3>
                 <li></li>
             </ul>
-            <ul><h3>'자전거도로 그리기' 버튼을 누르면 자전거 코스를 그릴 수 있습니다.</h3>
-                <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 생성시</strong> : <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'자전거도로 그리기' 버튼 클릭 
-                    <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 지도 위 시작지점 클릭 
-                    <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 코너 부분마다 클릭 후 마지막 도착지점 클릭 
-                    <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 마우스 우클릭 마무리<br><br></li>
-                <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 삭제시</strong> : '삭제' 버튼 클릭 (가장 마지막에 그렸던 코스부터 개별 삭제됩니다.)<br><br></li>
+            <ul>
+                <h3>'자전거도로 그리기' 버튼을 누르면 자전거 코스를 그릴 수 있습니다.</h3>
+                <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 생성시</strong> :
+                    <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'자전거도로 그리기' 버튼 클릭
+                    <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 지도 위 시작지점 클릭
+                    <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 코너 부분마다 클릭 후 마지막 도착지점 클릭
+                    <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 마우스 우클릭 마무리<br><br>
+                </li>
+                <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 삭제시</strong> : '삭제' 버튼 클릭 (가장 마지막에 그렸던 코스부터 개별 삭제됩니다.)<br><br>
+                </li>
                 <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 생성 중 중단</strong>: '취소' 버튼 클릭</li>
         </div>
     </div>
@@ -126,9 +140,8 @@
             </label>
             <nav class="information"> <!--설명 부분을 nav 박스로 감싸고 class명을 information으로 추가-->
                 <div class="lb-wrap">
-                    <a href="#" id="link" target="_blank"><img src="..\images\bike-default.jpg" id="image" class="aside-image" width="240" ,
-                            height="300"></a>
-                    <a href="#" id="attraction" class="linkT" target="_blank">관광지</a>
+                    <img src="..\images\bike-default.jpg" id="image" class="aside-image" width="240" , height="300">
+                    <a href="#" id="link" class="linkT" target="_blank"><span id="attraction">관광지</span></a>
                     <p class="describe">표시된 코스를 누르시면 <br>해당 자전거 코스를 소개합니다.</p>
                 </div>
                 <div class="text-infor">
@@ -160,14 +173,14 @@
                     </div>
                 </div>
                 <div class="mobile-logo-box">
-                <a href="page.html"><span class="mobile-logo">zagza</span></a>
+                    <a href="page.html"><span class="mobile-logo">zagza</span></a>
                 </div>
                 <div class="filter-manual">
                     <button id="filter-manual-btn" type="button">?</button>
                 </div>
                 <div id="mobile-container" class="closed">
                     <button type="button" id="mobile-toggle-aside" class="toggle-button">정보</button>
-                </div>   
+                </div>
                 <div id="mobile-drawing-buttons" class="mobile-drawing-buttons">
                     <button id="drawing-mobile" class="button">자전거코스 그리기</button> <!-- 모바일에선 데스크탑버튼 숨기기-->
                     <button id="delete-mobile" class="button">삭제</button> <!-- 모바일에선 데스크탑버튼 숨기기-->
@@ -211,74 +224,96 @@
                 </div>
             </main>
 
-        <!--정보 요약 창-->
-        <aside id="mobile-aside" class="closed">
-            <div class="mobile-aside-container">
-                <div class="mobile-image-wrapper">
-                    <a href="#" id="link" target="_blank"><img src="..\images\bike-default.jpg" id="image" class="mobile-image"></a>
+            <!--정보 요약 창-->
+            <aside id="mobile-aside" class="closed">
+                <div class="mobile-aside-container">
+                    <div class="mobile-image-wrapper">
+                        <img src="..\images\bike-default.jpg" id="image" class="mobile-image">
+                    </div>
+                    <!--이미지 옆 설명텍스트-->
+                    <div class="mobile-text-info">
+                        <p style="font-weight: bolder; font-size: 110%;"><a href="#" id="link" class="mobile-link"
+                                target="_blank">
+                                <span id="attraction">관광지</span></a></p>
+                        <hr>
+                        <p><span style="font-weight: bolder;">거리: </span><span class="total"></span>KM</p>
+                        <hr>
+                        <p><span style="font-weight: bolder;">시작 위치:</span> <span class="gugunNm"></span><span
+                                class="startSpot"></span></p>
+                        <hr>
+                        <p><span style="font-weight: bolder;">도착 위치:</span> <span class="gugunNm"></span><br><span
+                                class="endSpot"></span></p>
+                        <hr>
+                        <p class="describe">표시된 코스를 누르시면 해당 자전거 코스를 소개합니다.</p>
+                        <hr>
+                    </div>
                 </div>
-                <!--이미지 옆 설명텍스트-->
-                <div class="mobile-text-info"> 
-                    <p style="font-weight: bolder; font-size: 110%;"><a href="#" id="attraction" class="mobile-link" target="_blank">코스 이름</a></p>
-                    <hr>
-                    <p><span style="font-weight: bolder;">거리: </span><span class="total"></span>KM</p>
-                    <hr>
-                    <p><span style="font-weight: bolder;">시작 위치:</span> <span class="gugunNm"></span><span class="startSpot"></span></p>
-                    <hr>
-                    <p><span style="font-weight: bolder;">도착 위치:</span> <span class="gugunNm"></span><br><span class="endSpot"></span></p>
-                    <hr>
-                    <p class="describe">표시된 코스를 누르시면 해당 자전거 코스를 소개합니다.</p>
-                    <hr>
-                </div>
-            </div>
-        </aside>
-        <div id="mobile_myModal" class="mobile_modal">
-            <div class="mobile_modal-content">
-                <div class="mobile_modal_frame">
-                    <h1>사용방법</h1>
-                    <span class="mobile_close" id="mobile_closeModalButton">&times;</span>
-                </div>
-                <ul><p><h3>왼쪽 상단의 메뉴 버튼을 클릭 시 <br> 필터를 사용할 수 있습니다.</h3>
-                    <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>거리순</strong>: 자전거 코스의 길이에 따른 필터를 제공합니다.</li> 
-                    <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>위치</strong>: 자전거 코스가 속한 위치(구/군 기준)에 따른
-                                                                    <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                                                        필터를 제공합니다.</li> 
-                    <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>풍경</strong>: 주변 풍경(공원,강변, 바다, 도시)에 따른
-                                                                    <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                                                        필터를 제공합니다.</li></p>
-                </ul>
-                <ul><p><h3>지도 위의 마커나 선을 클릭 시<br>하단에 있는 요약창에 정보가 표시됩니다.</h3>
-                    <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>관광지명</strong>: 클릭 시 관련 정보 사이트로 연결됩니다.</li>
-                    <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>거리</strong>: 코스의 총 거리를 나타냅니다.</li>
-                    <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>시작/도착 위치</strong>: 시작/도착 위치의 주소를 나타냅니다.</li>
-                </p>
-                </ul>
-                <p><h3>추천 코스는 테마에 따라<br> 4가지 색으로 표현됩니다.</h3>
+            </aside>
+            <div id="mobile_myModal" class="mobile_modal">
+                <div class="mobile_modal-content">
+                    <div class="mobile_modal_frame">
+                        <h1>사용방법</h1>
+                        <span class="mobile_close" id="mobile_closeModalButton">&times;</span>
+                    </div>
+                    <ul>
+                        <p>
+                        <h3>왼쪽 상단의 메뉴 버튼을 클릭 시 <br> 필터를 사용할 수 있습니다.</h3>
+                        <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>거리순</strong>: 자전거 코스의 길이에 따른 필터를 제공합니다.</li>
+                        <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>위치</strong>: 자전거 코스가 속한 위치(구/군 기준)에 따른
+                            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            필터를 제공합니다.
+                        </li>
+                        <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>풍경</strong>: 주변 풍경(공원,강변, 바다, 도시)에 따른
+                            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            필터를 제공합니다.
+                        </li>
+                        </p>
+                    </ul>
+                    <ul>
+                        <p>
+                        <h3>지도 위의 마커나 선을 클릭 시<br>하단에 있는 요약창에 정보가 표시됩니다.</h3>
+                        <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>관광지</strong>: 클릭 시 관련 정보 사이트로 연결됩니다.</li>
+                        <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>거리</strong>: 코스의 총 거리를 나타냅니다.</li>
+                        <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>시작/도착 위치</strong>: 시작/도착 위치의 주소를 나타냅니다.</li>
+                        </p>
+                    </ul>
+                    <p>
+                    <h3>추천 코스는 테마에 따라<br> 4가지 색으로 표현됩니다.</h3>
                     <span class="mobile_manual_thema" style="text-align: center;">
-                        <span class="mobile_manual_thema_logo" ><img src="../images/park_marker.png"><span id="forestgreen">공원</span></span>
-                        <span class="mobile_manual_thema_logo" ><img src="../images/river_marker.png"><span id="turquoise">강변</span></span>
-                        <span class="mobile_manual_thema_logo" ><img src="../images/beach_marker.png"><span id="cobalt_blue">바다</span></span>
-                        <span class="mobile_manual_thema_logo" ><img src="../images/city_marker.png"><span id="cadetblue">도시</span></span>
+                        <span class="mobile_manual_thema_logo"><img src="../images/park_marker.png"><span
+                                id="forestgreen">공원</span></span>
+                        <span class="mobile_manual_thema_logo"><img src="../images/river_marker.png"><span
+                                id="turquoise">강변</span></span>
+                        <span class="mobile_manual_thema_logo"><img src="../images/beach_marker.png"><span
+                                id="cobalt_blue">바다</span></span>
+                        <span class="mobile_manual_thema_logo"><img src="../images/city_marker.png"><span
+                                id="cadetblue">도시</span></span>
                     </span><br>
-                </p> 
-                <ul><h3>우측 하단의 '정보' 버튼을 클릭 시<br> 정보 요약 창을 축소시킬 수 있습니다.</h3>
-                    <li></li>
-                </ul>
-                <ul><h3>'자전거도로 그리기' 버튼을 누르면<br> 자전거 코스를 그릴 수 있습니다.</h3>
-                    <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 생성시</strong> : <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'자전거도로 그리기' 버튼 클릭 
-                        <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 지도 위 시작지점 클릭 
-                        <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 코너 부분마다 클릭 후 마지막 도착지점 클릭 
-                        <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 마우스 우클릭 마무리<br><br></li>
-                    <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 삭제시</strong> : '삭제' 버튼 클릭 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(가장 마지막에 그렸던 코스부터 개별 삭제됩니다.)<br><br></li>
-                    <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 생성 중 중단</strong>: '취소' 버튼 클릭</li>
+                    </p>
+                    <ul>
+                        <h3>우측 하단의 '정보' 버튼을 클릭 시<br> 정보 요약 창을 축소시킬 수 있습니다.</h3>
+                        <li></li>
+                    </ul>
+                    <ul>
+                        <h3>'자전거도로 그리기' 버튼을 누르면<br> 자전거 코스를 그릴 수 있습니다.</h3>
+                        <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 생성시</strong> :
+                            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'자전거도로 그리기' 버튼 클릭
+                            <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 지도 위 시작지점 클릭
+                            <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 코너 부분마다 클릭 후 마지막 도착지점 클릭
+                            <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 마우스 우클릭 마무리<br><br>
+                        </li>
+                        <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 삭제시</strong> : '삭제' 버튼 클릭
+                            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(가장 마지막에 그렸던 코스부터 개별 삭제됩니다.)<br><br>
+                        </li>
+                        <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 생성 중 중단</strong>: '취소' 버튼 클릭</li>
+                </div>
             </div>
         </div>
-    </div>
-    <!--==============================================================모바일 끝===============================================================================-->
-    <script src="../js/polyline-data.js"></script>
-    <script src="../js/app.js"></script>
-    <script src="../js/Modalpopup.js"></script>
-    <!--==============================================================지도 설정 끝===============================================================================-->
+        <!--==============================================================모바일 끝===============================================================================-->
+        <script src="../js/polyline-data.js"></script>
+        <script src="../js/app.js"></script>
+        <script src="../js/Modalpopup.js"></script>
+        <!--==============================================================지도 설정 끝===============================================================================-->
 </body>
 
 </html>
