--- a/template/main.html
+++ b/template/main.html
@@ -63,7 +63,7 @@
             </ul>
         </nav>
         <div class="desktop-drawing-buttons">
-            <button id="drawing-desktop" class="button">자전거 도로 그리기</button> <!-- 데스크탑에선 모바일버튼 숨기기-->
+            <button id="drawing-desktop" class="button">자전거 코스 그리기</button> <!-- 데스크탑에선 모바일버튼 숨기기-->
             <button id="delete-desktop" class="button">삭제</button> <!-- 데스크탑에선 모바일버튼 숨기기-->
         </div>
     </header>
@@ -108,9 +108,9 @@
                 <li></li>
             </ul>
             <ul>
-                <h3>'자전거도로 그리기' 버튼을 누르면 자전거 코스를 그릴 수 있습니다.</h3>
+                <h3>'자전거코스 그리기' 버튼을 누르면 자전거 코스를 그릴 수 있습니다.</h3>
                 <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 생성시</strong> :
-                    <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'자전거도로 그리기' 버튼 클릭
+                    <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'자전거코스 그리기' 버튼 클릭
                     <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 지도 위 시작지점 클릭
                     <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 코너 부분마다 클릭 후 마지막 도착지점 클릭
                     <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 마우스 우클릭 마무리<br><br>
@@ -182,7 +182,7 @@
                     <button type="button" id="mobile-toggle-aside" class="toggle-button">정보</button>
                 </div>
                 <div id="mobile-drawing-buttons" class="mobile-drawing-buttons">
-                    <button id="drawing-mobile" class="button">자전거도로 그리기</button> 
+                    <button id="drawing-mobile" class="button">자전거코스 그리기</button> 
                     <button id="delete-mobile" class="button">삭제</button> 
                 </div>
             </header>
@@ -295,9 +295,9 @@
                         <li></li>
                     </ul>
                     <ul>
-                        <h3>'자전거도로 그리기' 버튼을 누르면<br> 자전거 코스를 그릴 수 있습니다.</h3>
+                        <h3>'자전거코스 그리기' 버튼을 누르면<br> 자전거 코스를 그릴 수 있습니다.</h3>
                         <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 생성시</strong> :
-                            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'자전거도로 그리기' 버튼 클릭
+                            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'자전거코스 그리기' 버튼 클릭
                             <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 지도 위 시작지점 클릭
                             <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 코너 부분마다 클릭 후 마지막 도착지점 클릭
                             <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 마우스 우클릭 마무리<br><br>
