--- a/template/main.html
+++ b/template/main.html
@@ -63,8 +63,8 @@
             </ul>
         </nav>
         <div class="desktop-drawing-buttons">
-            <button id="drawing-desktop" class="button">자전거 코스 그리기</button> <!-- 데스크탑에선 모바일버튼 숨기기-->
-            <button id="delete-desktop" class="button">삭제</button> <!-- 데스크탑에선 모바일버튼 숨기기-->
+            <button id="drawing-desktop" class="button">자전거 코스 그리기</button> 
+            <button id="delete-desktop" class="button">삭제</button> 
         </div>
     </header>
     <!--데스크톱 해더 끝-->
